--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
     <!-- FEATURES -->
     <section class="section__container feature__container" id="service">
       <div class="feature__card">
-        <img src="assets/feature-1.png" alt="feature" />
+        <img src="feature-1.png" alt="feature" />
         <div>
           <h4>Best Destinations</h4>
           <p>Discover the most breathtaking places around the globe.</p>
         </div>
       </div>
       <div class="feature__card">
-        <img src="assets/feature-2.png" alt="feature" />
+        <img src="feature-2.png" alt="feature" />
         <div>
           <h4>Best Price Guaranteed</h4>
           <p>Enjoy unbeatable prices on every trip you book.</p>
         </div>
       </div>
       <div class="feature__card">
-        <img src="assets/feature-3.png" alt="feature" />
+        <img src="feature-3.png" alt="feature" />
         <div>
           <h4>Instant Booking</h4>
           <p>Secure your dream vacation with just a click.</p>
@@ -92,15 +92,15 @@
 
         <div class="destination__grid">
           <div class="destination__card">
-            <img src="assets/Bhutan.jpg" alt="destination" />
+            <img src="Bhutan.jpg" alt="destination" />
             <div class="destination__content">Bhutan</div>
           </div>
           <div class="destination__card">
-            <img src="assets/Komodo Island.jpg" alt="destination" />
+            <img src="Komodo Island.jpg" alt="destination" />
             <div class="destination__content">Komodo Island</div>
           </div>
           <div class="destination__card">
-            <img src="assets/Bali.jpg" alt="destination" />
+            <img src="Bali.jpg" alt="destination" />
             <div class="destination__content">Tanah Lot</div>
           </div>
         </div>
@@ -279,5 +279,6 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
