--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
       <div class="package__grid">
         <div class="package__card">
-          <img src="assets/package-1.jpg" alt="package" />
+          <img src="package-1.jpg" alt="package" />
           <div class="package__card__details">
             <h4>Thailand City Tour</h4>
             <p>Explore the vibrant culture and stunning landscapes of Thailand.</p>
@@ -136,7 +136,7 @@
         </div>
 
         <div class="package__card">
-          <img src="assets/package-2.jpg" alt="package" />
+          <img src="package-2.jpg" alt="package" />
           <div class="package__card__details">
             <h4>Laos City Tour</h4>
             <p>Immerse yourself in the rich culture and landscapes of Laos.</p>
@@ -148,7 +148,7 @@
         </div>
 
         <div class="package__card">
-          <img src="assets/package-3.jpg" alt="package" />
+          <img src="package-3.jpg" alt="package" />
           <div class="package__card__details">
             <h4>Singapore City Tour</h4>
             <p>Experience the vibrant blend of culture and architecture.</p>
@@ -169,13 +169,13 @@
       <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <div class="client__card"><img src="assets/client-1.jpg" /><span><i class="ri-double-quotes-l"></i></span><p>The instant booking feature is amazing.</p><h4>Michael Lee</h4><h5>Software Engineer</h5></div>
+            <div class="client__card"><img src="client-1.jpg" /><span><i class="ri-double-quotes-l"></i></span><p>The instant booking feature is amazing.</p><h4>Michael Lee</h4><h5>Software Engineer</h5></div>
           </div>
           <div class="swiper-slide">
-            <div class="client__card"><img src="assets/client-2.jpg" /><span><i class="ri-double-quotes-l"></i></span><p>Best price guarantee really works!</p><h4>Sarah Johnson</h4><h5>Marketing Manager</h5></div>
+            <div class="client__card"><img src="client-2.jpg" /><span><i class="ri-double-quotes-l"></i></span><p>Best price guarantee really works!</p><h4>Sarah Johnson</h4><h5>Marketing Manager</h5></div>
           </div>
           <div class="swiper-slide">
-            <div class="client__card"><img src="assets/client-3.jpg" /><span><i class="ri-double-quotes-l"></i></span><p>Great customer service.</p><h4>David Martinez</h4><h5>Financial Analyst</h5></div>
+            <div class="client__card"><img src="client-3.jpg" /><span><i class="ri-double-quotes-l"></i></span><p>Great customer service.</p><h4>David Martinez</h4><h5>Financial Analyst</h5></div>
           </div>
         </div>
 
@@ -244,7 +244,7 @@
         </div>
       </div>
 
-      <div class="footer__bar">Copyright © 2025 Revania. All rights reserved.</div>
+      <div class="footer__bar"> © 2025 Revania. All rights reserved.</div>
     </footer>
 
     <!-- MODAL BOOKING -->
@@ -279,6 +279,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
