--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <!-- HEADER -->
     <header class="header" id="home">
+      <img src="header.jpg" alt="Header Background" class="header-bg" />
       <div class="section__container header__container">
         <h1>TRAVELLER<br /><span>FOR LIFE.</span></h1>
         <p>Live your best moments</p>
@@ -279,6 +280,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
